--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <header>
       <div class="container header-content">
         <img
-          src="../Myphotos/bgchanged.png"
+          src="./bgchanged.png"
           alt="Profile Picture"
           class="profile-img"
         />
