--- a/index.html
+++ b/index.html
@@ -53,26 +53,25 @@
     <section id="about" class="container">
       <h3>👋 About Me</h3>
       <p>
-        I’m a .NET Full-Stack Developer passionate about creating modern web
-        applications using ASP.NET Core, C#, Web API, SQL Server, and React. I
-        love combining clean backend logic with intuitive frontend design.
-        Always exploring new tech, solving problems, and turning ideas into
-        products.
+        I’m a .NET Full-Stack Developer passionate about building modern, scalable web applications using ASP.NET Core, C#, Web API, SQL Server, and React. I enjoy combining clean backend architecture with intuitive, responsive frontend design.
+Recently, I’ve been exploring Microservices Architecture, Azure cloud deployment, and xUnit testing to enhance performance, reliability, and maintainability. I love solving real-world problems, learning new technologies, and turning ideas into impactful digital solutions.
       </p>
     </section>
 
     <!-- Skills -->
-    <section id="skills" class="container">
-      <h3>💻 Skills</h3>
-      <div class="card-grid">
-        <div class="card">C#, .NET Core, ASP.NET</div>
-        <div class="card">SQL Server, Entity Framework</div>
-        <div class="card">React, JavaScript</div>
-        <div class="card">HTML, CSS, Tailwind, Bootstrap</div>
-        <div class="card">REST APIs, JSON, Axios</div>
-        <div class="card">Git, GitHub, Agile</div>
-      </div>
-    </section>
+   <section id="skills" class="container">
+  <h3>💻 Skills</h3>
+  <div class="card-grid">
+    <div class="card">C#, .NET Core, ASP.NET Web API</div>
+    <div class="card">Microservices Architecture, xUnit (Unit Testing)</div>
+    <div class="card">SQL Server, Entity Framework Core , ADO .NET</div>
+    <div class="card">React, JavaScript, Redux</div>
+    <div class="card">HTML, CSS, Tailwind CSS, Bootstrap</div>
+    <div class="card">REST APIs, JSON, Axios, JWT Authentication</div>
+    <div class="card">Azure, Git, GitHub, Agile</div>
+  </div>
+</section>
+
 
     <!-- Experience -->
     <section id="experience" class="container">
