--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Updated portfolio HTML with added details from CV, keeping the same design -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,28 +12,19 @@
     />
   </head>
   <body>
-   
-
-
-     <header>
+    <header>
       <div class="container header-content">
-        <img
-          src="./bgchanged.png"
-          alt="Profile Picture"
-          class="profile-img"
-        />
+        <img src="./bgchanged.png" alt="Profile Picture" class="profile-img" />
         <h1>Muhammed Suhail P</h1>
-        <h2>Full Stack Developer</h2>
+        <h2>.NET Full Stack Developer</h2>
         <p class="tagline">Building scalable apps with .NET Core & React</p>
-       <div class="header-links">
+        <div class="header-links">
           <a
             href="https://mail.google.com/mail/?view=cm&fs=1&to=suhailpalakkal1@gmail.com"
             target="_blank"
             class="btn"
+            >Email</a
           >
-            Email
-          </a>
-
           <a
             href="https://www.linkedin.com/in/muhammed-suhail-p-a0061235b"
             target="_blank"
@@ -53,58 +45,77 @@
     <section id="about" class="container">
       <h3>👋 About Me</h3>
       <p>
-        I’m a .NET Full-Stack Developer passionate about building modern, scalable web applications using ASP.NET Core, C#, Web API, SQL Server, and React. I enjoy combining clean backend architecture with intuitive, responsive frontend design.
-Recently, I’ve been exploring Microservices Architecture, Azure cloud deployment, and xUnit testing to enhance performance, reliability, and maintainability. I love solving real-world problems, learning new technologies, and turning ideas into impactful digital solutions.
+        I am a .NET Full Stack Developer with hands-on experience in building
+        modern, scalable web applications using <strong>ASP.NET Core Web API, C#, Entity Framework Core, ADO.NET, SQL Server, and React.js</strong>.
+        I enjoy combining clean backend architecture with intuitive, responsive
+        frontend design.
+        <br /><br />
+        I have experience working with <strong>JWT Authentication, SignalR, Clean Architecture, Microservices concepts, xUnit testing</strong>, and deploying apps on
+        <strong>Microsoft Azure</strong>. I love solving real-world problems, learning new
+        technologies, and turning ideas into impactful digital solutions.
       </p>
     </section>
 
     <!-- Skills -->
-   <section id="skills" class="container">
-  <h3>💻 Skills</h3>
-  <div class="card-grid">
-    <div class="card">C#, .NET Core, ASP.NET Web API</div>
-    <div class="card">Microservices Architecture, xUnit (Unit Testing)</div>
-    <div class="card">SQL Server, Entity Framework Core , ADO .NET</div>
-    <div class="card">React, JavaScript, Redux</div>
-    <div class="card">HTML, CSS, Tailwind CSS, Bootstrap</div>
-    <div class="card">REST APIs, JSON, Axios, JWT Authentication</div>
-    <div class="card">Azure, Git, GitHub, Agile</div>
-  </div>
-</section>
-
+    <section id="skills" class="container">
+      <h3>💻 Skills</h3>
+      <div class="card-grid">
+        <div class="card">C#, .NET Core, ASP.NET Web API</div>
+        <div class="card">Microservices, Clean Architecture, xUnit Testing</div>
+        <div class="card">SQL Server, Entity Framework Core, ADO.NET</div>
+        <div class="card">React, JavaScript, Redux, Axios</div>
+        <div class="card">HTML, CSS, Tailwind CSS, Bootstrap</div>
+        <div class="card">REST APIs, JSON, JWT Authentication</div>
+        <div class="card">Azure, Git, GitHub, Agile</div>
+      </div>
+    </section>
 
     <!-- Experience -->
     <section id="experience" class="container">
       <h3>🚀 Experience</h3>
       <div class="card">
-        <h4>Full Stack Developer Intern – Bridgeon IT Solutions</h4>
-        <p><em>Apr 2025 – Dec 2025 | Manjeri, Malappuram</em></p>
+        <h4>.NET Full Stack Developer – Bridgeon IT Solutions</h4>
+        <p><em>Mar 2025 – Present | Manjeri, Malappuram</em></p>
         <ul>
-          <li>Created responsive UIs with React.js</li>
-          <li>Built REST APIs with .NET Core, C#, Web API</li>
-          <li>Integrated frontend & backend seamlessly</li>
-          <li>Collaborated in Agile teams with Git workflows</li>
+          <li>Built and integrated RESTful APIs in .NET Core Web API.</li>
+          <li>Implemented JWT-based authentication and role-based authorization.</li>
+          <li>Designed and optimized SQL Server queries and EF Core models.</li>
+          <li>Collaborated in an Agile environment with Git-based workflows.</li>
+          <li>Enhanced application performance and user experience.</li>
         </ul>
       </div>
     </section>
 
     <!-- Projects -->
-
     <section id="projects" class="container">
       <h3>📂 Projects</h3>
       <div class="card-grid">
         <div class="card">
+          <h4>CollabCode – Collaborative Code Editor</h4>
+          <p>
+            A real-time collaborative coding platform featuring project rooms,
+            live code sync, chat, file sharing, and role-based access control.
+          </p>
+          <p>
+            <strong>Backend:</strong> ASP.NET Core Web API, EF Core, SignalR<br />
+            <strong>Frontend:</strong> React.js, Bootstrap<br />
+            <strong>Database:</strong> SQL Server
+          </p>
+          <a href="#" target="_blank" class="btn small">Frontend Repo</a>
+          <a href="#" target="_blank" class="btn small">Backend Repo</a>
+        </div>
+
+        <div class="card">
           <h4>Full-Stack E-Commerce Website</h4>
           <p>
-            A complete e-commerce platform with user and admin panels. Features
-            include product browsing, search, filters, shopping cart, order
-            management, and admin dashboards for product and user management.
+            A complete e-commerce platform with user & admin panels, JWT
+            authentication, product management, shopping cart, and order
+            workflows.
           </p>
           <p>
             <strong>Frontend:</strong> React, Bootstrap, Axios<br />
-            <strong>Backend:</strong> ASP.NET Core Web API, Entity Framework<br />
-            <strong>Database:</strong> SQL Server<br />
-            <strong>Other Tools:</strong> AutoMapper, Bcrypt (password hashing)
+            <strong>Backend:</strong> ASP.NET Core Web API<br />
+            <strong>Database:</strong> SQL Server
           </p>
           <a
             href="https://github.com/mhdhsp/Ecommerce"
@@ -113,7 +124,6 @@ Recently, I’ve been exploring Microservices Architecture, Azure cloud deployme
             >View Project</a
           >
         </div>
-        <!-- Add more projects here -->
       </div>
     </section>
 
@@ -126,8 +136,7 @@ Recently, I’ve been exploring Microservices Architecture, Azure cloud deployme
         </div>
         <div class="card">
           <p>
-            <strong>Higher Secondary (CS)</strong><br />GMHSS Perinthalmanna<br />2016
-            – 2018
+            <strong>Higher Secondary (CS)</strong><br />GMHSS Perinthalmanna<br />2016 – 2018
           </p>
         </div>
       </div>
@@ -145,48 +154,40 @@ Recently, I’ve been exploring Microservices Architecture, Azure cloud deployme
     </section>
 
     <!-- Contact -->
-  <section id="contact" class="container">
-  <h3>📬 Contact Me</h3>
-  <form id="contactForm" action="https://formspree.io/f/movnzedn" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <textarea name="message" placeholder="Your Message" required></textarea>
-    <button type="submit" class="btn primary">Send Message</button>
-  </form>
-</section>
-
-
-
+    <section id="contact" class="container">
+      <h3>📬 Contact Me</h3>
+      <form id="contactForm" action="https://formspree.io/f/movnzedn" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit" class="btn primary">Send Message</button>
+      </form>
+    </section>
 
     <footer>
-      <p>⚡ Built by Muhammed Suhail P | Full Stack Developer</p>
+      <p>⚡ Built by Muhammed Suhail P | .NET Full Stack Developer</p>
     </footer>
 
-
     <script>
-  const form = document.getElementById("contactForm");
+      const form = document.getElementById("contactForm");
 
-  form.addEventListener("submit", async function (event) {
-    event.preventDefault(); // stop normal reload
-    const formData = new FormData(form);
+      form.addEventListener("submit", async function (event) {
+        event.preventDefault();
+        const formData = new FormData(form);
 
-    // send request to Formspree
-    const response = await fetch(form.action, {
-      method: form.method,
-      body: formData,
-      headers: { 'Accept': 'application/json' }
-    });
+        const response = await fetch(form.action, {
+          method: form.method,
+          body: formData,
+          headers: { Accept: "application/json" }
+        });
 
-    if (response.ok) {
-      alert("✅ Message sent successfully!");
-      form.reset(); // clears all fields
-    } else {
-      alert("⚠️ Oops! Something went wrong. Please try again.");
-    }
-  });
-</script>
-
-
-
+        if (response.ok) {
+          alert("✅ Message sent successfully!");
+          form.reset();
+        } else {
+          alert("⚠️ Oops! Something went wrong. Please try again.");
+        }
+      });
+    </script>
   </body>
 </html>
