--- a/index.html
+++ b/index.html
@@ -90,22 +90,7 @@
     <section id="projects" class="container">
       <h3>📂 Projects</h3>
       <div class="card-grid">
-        <div class="card">
-          <h4>CollabCode – Collaborative Code Editor</h4>
-          <p>
-            A real-time collaborative coding platform featuring project rooms,
-            live code sync, chat, file sharing, and role-based access control.
-          </p>
-          <p>
-            <strong>Backend:</strong> ASP.NET Core Web API, EF Core, SignalR<br />
-            <strong>Frontend:</strong> React.js, Bootstrap<br />
-            <strong>Database:</strong> SQL Server
-          </p>
-          <a href="#" target="_blank" class="btn small">Frontend Repo</a>
-          <a href="#" target="_blank" class="btn small">Backend Repo</a>
-        </div>
-
-        <div class="card">
+           <div class="card">
           <h4>Full-Stack E-Commerce Website</h4>
           <p>
             A complete e-commerce platform with user & admin panels, JWT
@@ -123,7 +108,28 @@
             class="btn small"
             >View Project</a
           >
+          <a
+            href="https://spectacular-jalebi-743cca.netlify.app/"
+            target="_blank"
+            class="btn small"
+            >Live Link</a
+          >
         </div>
+        <div class="card">
+          <h4>CollabCode – Collaborative Code Editor</h4>
+          <p>
+            A real-time collaborative coding platform featuring project rooms,
+            live code sync, chat, file sharing, and role-based access control.
+          </p>
+          <p>
+            <strong>Backend:</strong> ASP.NET Core Web API, EF Core, SignalR<br />
+            <strong>Frontend:</strong> React.js, Bootstrap<br />
+            <strong>Database:</strong> SQL Server
+          </p>
+          <a href="https://github.com/mhdhsp/Teexo_backend.git" target="_blank" class="btn small">View Project</a>
+        </div>
+
+     
       </div>
     </section>
 
