--- a/index.html
+++ b/index.html
@@ -90,16 +90,15 @@
     <section id="projects" class="container">
       <h3>📂 Projects</h3>
       <div class="card-grid">
-           <div class="card">
-          <h4>Full-Stack E-Commerce Website</h4>
+        <div class="card">
+          <h4>CollabCode – Collaborative Code Editor</h4>
           <p>
-            A complete e-commerce platform with user & admin panels, JWT
-            authentication, product management, shopping cart, and order
-            workflows.
+            A real-time collaborative coding platform featuring project rooms,
+            live code sync, chat, file sharing, and role-based access control.
           </p>
           <p>
-            <strong>Frontend:</strong> React, Bootstrap, Axios<br />
-            <strong>Backend:</strong> ASP.NET Core Web API<br />
+            <strong>Backend:</strong> ASP.NET Core Web API, EF Core, SignalR<br />
+            <strong>Frontend:</strong> React.js, Bootstrap<br />
             <strong>Database:</strong> SQL Server
           </p>
           <a
@@ -112,24 +111,24 @@
             href="https://spectacular-jalebi-743cca.netlify.app/"
             target="_blank"
             class="btn small"
-            >Live Link</a
-          >
+            >Live Link</a>
         </div>
+
         <div class="card">
-          <h4>CollabCode – Collaborative Code Editor</h4>
+          <h4>Full-Stack E-Commerce Website</h4>
           <p>
-            A real-time collaborative coding platform featuring project rooms,
-            live code sync, chat, file sharing, and role-based access control.
+            A complete e-commerce platform with user & admin panels, JWT
+            authentication, product management, shopping cart, and order
+            workflows.
           </p>
           <p>
-            <strong>Backend:</strong> ASP.NET Core Web API, EF Core, SignalR<br />
-            <strong>Frontend:</strong> React.js, Bootstrap<br />
+            <strong>Frontend:</strong> React, Bootstrap, Axios<br />
+            <strong>Backend:</strong> ASP.NET Core Web API<br />
             <strong>Database:</strong> SQL Server
           </p>
           <a href="https://github.com/mhdhsp/Teexo_backend.git" target="_blank" class="btn small">View Project</a>
+          
         </div>
-
-     
       </div>
     </section>
 
