--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <strong>Database:</strong> SQL Server
           </p>
           <a
-            href="https://github.com/mhdhsp/Ecommerce"
+            href="https://github.com/mhdhsp/CollabCode_Backend.git"
             target="_blank"
             class="btn small"
             >View Project</a
