--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section id="skills" class="container">
       <h3>💻 Skills</h3>
       <div class="card-grid">
-        <div class="card">C#, .NET Core, ASP.NET Web API</div>
+        <div class="card">C#, .NET Core, ASP.NET Web API,signalR</div>
         <div class="card">Microservices, Clean Architecture, xUnit Testing</div>
         <div class="card">SQL Server, Entity Framework Core, ADO.NET</div>
         <div class="card">React, JavaScript, Redux, Axios</div>
