--- a/index.html
+++ b/index.html
@@ -1,198 +1,150 @@
-<!-- Updated portfolio HTML with added details from CV, keeping the same design -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muhammed Suhail P | Full Stack Developer</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="container header-content">
-        <img src="./bgchanged.png" alt="Profile Picture" class="profile-img" />
-        <h1>Muhammed Suhail P</h1>
-        <h2>.NET Full Stack Developer</h2>
-        <p class="tagline">Building scalable apps with .NET Core & React</p>
-        <div class="header-links">
-          <a
-            href="https://mail.google.com/mail/?view=cm&fs=1&to=suhailpalakkal1@gmail.com"
-            target="_blank"
-            class="btn"
-            >Email</a
-          >
-          <a
-            href="https://www.linkedin.com/in/muhammed-suhail-p-a0061235b"
-            target="_blank"
-            class="btn"
-            >LinkedIn</a
-          >
-          <a href="https://github.com/mhdhsp" target="_blank" class="btn"
-            >GitHub</a
-          >
-          <a href="resume.pdf" target="_blank" class="btn primary"
-            >Download Resume</a
-          >
-        </div>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Muhammed Suhail P | .NET Full-Stack Developer</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+</head>
 
-    <!-- About -->
-    <section id="about" class="container">
-      <h3>👋 About Me</h3>
+<body>
+
+<header>
+  <div class="container header-content">
+    <img src="./bgchanged.png" alt="Profile Picture" class="profile-img" />
+    <h1>Muhammed Suhail P</h1>
+    <h2>.NET Full-Stack Developer</h2>
+    <p class="tagline">Building secure backend systems with ASP.NET Core & React</p>
+
+    <div class="header-links">
+      <a href="mailto:suhailpalakkal1@gmail.com" class="btn">Email</a>
+      <a href="https://www.linkedin.com/in/muhammed-suhail-p" target="_blank" class="btn">LinkedIn</a>
+      <a href="https://github.com/mhdhsp" target="_blank" class="btn">GitHub</a>
+      <a href="resume.pdf" target="_blank" class="btn primary">Download Resume</a>
+    </div>
+  </div>
+</header>
+
+<!-- About -->
+<section id="about" class="container">
+  <h3>👋 About Me</h3>
+  <p>
+    Junior .NET Full-Stack Developer with hands-on experience building 
+    <strong>ASP.NET Core Web APIs</strong> and <strong>SQL Server–based applications</strong>
+    in an Agile, production environment.
+    <br><br>
+    Experienced in developing secure backend systems using 
+    <strong>JWT-based authentication</strong>, designing RESTful APIs, and building 
+    responsive user interfaces with <strong>React</strong>.
+    Strong foundation in <strong>Clean Architecture</strong>, real-world project development,
+    and collaborative team workflows.
+  </p>
+</section>
+
+<!-- Skills -->
+<section id="skills" class="container">
+  <h3>💻 Technical Skills</h3>
+  <div class="card-grid">
+    <div class="card">C#, ASP.NET Core Web API, LINQ, SignalR</div>
+    <div class="card">Entity Framework Core, ADO.NET, Dapper</div>
+    <div class="card">SQL Server, Stored Procedures, Joins, Query Optimization</div>
+    <div class="card">React.js, Redux, JavaScript, jQuery, TypeScript</div>
+    <div class="card">HTML5, CSS3, Tailwind CSS, Bootstrap</div>
+    <div class="card">JWT Authentication, REST APIs, Clean Architecture</div>
+    <div class="card">Git, GitHub, Agile, xUnit, Azure (Basics)</div>
+  </div>
+</section>
+
+<!-- Experience -->
+<section id="experience" class="container">
+  <h3>🚀 Experience</h3>
+  <div class="card">
+    <h4>.NET Full-Stack Developer Intern – Bridgeon IT Solutions</h4>
+    <p><em>March 2025 – January 2026</em></p>
+    <ul>
+      <li>Worked in a production Agile environment following sprint-based delivery.</li>
+      <li>Developed and maintained ASP.NET Core Web APIs using Clean Architecture.</li>
+      <li>Implemented JWT-based authentication and role-based authorization.</li>
+      <li>Designed and optimized SQL Server databases using EF Core and ADO.NET.</li>
+      <li>Built responsive React components integrated with backend APIs.</li>
+      <li>Participated in code reviews and Git-based collaboration workflows.</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Projects -->
+<section id="projects" class="container">
+  <h3>📂 Projects</h3>
+  <div class="card-grid">
+
+    <div class="card">
+      <h4>SmartDesk – Resource Management SaaS</h4>
       <p>
-        I am a .NET Full Stack Developer with hands-on experience in building
-        modern, scalable web applications using <strong>ASP.NET Core Web API, C#, Entity Framework Core, ADO.NET, SQL Server, and React.js</strong>.
-        I enjoy combining clean backend architecture with intuitive, responsive
-        frontend design.
-        <br /><br />
-        I have experience working with <strong>JWT Authentication, SignalR, Clean Architecture, Microservices concepts, xUnit testing</strong>, and deploying apps on
-        <strong>Microsoft Azure</strong>. I love solving real-world problems, learning new
-        technologies, and turning ideas into impactful digital solutions.
+        SaaS-based system for registering, allocating, and monitoring company resources
+        across multiple organizations with role-based access.
       </p>
-    </section>
+      <p>
+        <strong>Tech:</strong> ASP.NET Core Web API, SQL Server, EF Core, Dapper,
+        Hangfire, SignalR, React, JWT, Clean Architecture
+      </p>
+      <a href="https://github.com/mhdhsp" target="_blank" class="btn small">View Project</a>
+    </div>
 
-    <!-- Skills -->
-    <section id="skills" class="container">
-      <h3>💻 Skills</h3>
-      <div class="card-grid">
-        <div class="card">C#, .NET Core, ASP.NET Web API,signalR</div>
-        <div class="card">Microservices, Clean Architecture, xUnit Testing</div>
-        <div class="card">SQL Server, Entity Framework Core, ADO.NET</div>
-        <div class="card">React, JavaScript, Redux, Axios</div>
-        <div class="card">HTML, CSS, Tailwind CSS, Bootstrap</div>
-        <div class="card">REST APIs, JSON, JWT Authentication</div>
-        <div class="card">Azure, Git, GitHub, Agile</div>
-      </div>
-    </section>
+    <div class="card">
+      <h4>CollabCode – Real-Time Collaborative Editor</h4>
+      <p>
+        Real-time collaborative coding platform with live code sync, chat,
+        and role-based access control.
+      </p>
+      <p>
+        <strong>Tech:</strong> ASP.NET Core, SignalR, React, SQL Server
+      </p>
+      <a href="https://github.com/mhdhsp/CollabCode_Backend.git" target="_blank" class="btn small">View Project</a>
+      <a href="https://spectacular-jalebi-743cca.netlify.app/" target="_blank" class="btn small">Live</a>
+    </div>
 
-    <!-- Experience -->
-    <section id="experience" class="container">
-      <h3>🚀 Experience</h3>
-      <div class="card">
-        <h4>.NET Full Stack Developer – Bridgeon IT Solutions</h4>
-        <p><em>Mar 2025 – Present | Manjeri, Malappuram</em></p>
-        <ul>
-          <li>Built and integrated RESTful APIs in .NET Core Web API.</li>
-          <li>Implemented JWT-based authentication and role-based authorization.</li>
-          <li>Designed and optimized SQL Server queries and EF Core models.</li>
-          <li>Collaborated in an Agile environment with Git-based workflows.</li>
-          <li>Enhanced application performance and user experience.</li>
-        </ul>
-      </div>
-    </section>
+    <div class="card">
+      <h4>Teexo – E-Commerce Application</h4>
+      <p>
+        Full-stack e-commerce platform with admin and user roles,
+        cart management, and order processing.
+      </p>
+      <p>
+        <strong>Tech:</strong> ASP.NET Core Web API, C#, React, Redux,
+        SQL Server, EF Core, JWT
+      </p>
+      <a href="https://github.com/mhdhsp/Teexo_backend.git" target="_blank" class="btn small">View Project</a>
+    </div>
 
-    <!-- Projects -->
-    <section id="projects" class="container">
-      <h3>📂 Projects</h3>
-      <div class="card-grid">
-        <div class="card">
-          <h4>CollabCode – Collaborative Code Editor</h4>
-          <p>
-            A real-time collaborative coding platform featuring project rooms,
-            live code sync, chat, file sharing, and role-based access control.
-          </p>
-          <p>
-            <strong>Backend:</strong> ASP.NET Core Web API, EF Core, SignalR<br />
-            <strong>Frontend:</strong> React.js, Bootstrap<br />
-            <strong>Database:</strong> SQL Server
-          </p>
-          <a
-            href="https://github.com/mhdhsp/CollabCode_Backend.git"
-            target="_blank"
-            class="btn small"
-            >View Project</a
-          >
-          <a
-            href="https://spectacular-jalebi-743cca.netlify.app/"
-            target="_blank"
-            class="btn small"
-            >Live Link</a>
-        </div>
+  </div>
+</section>
 
-        <div class="card">
-          <h4>Full-Stack E-Commerce Website</h4>
-          <p>
-            A complete e-commerce platform with user & admin panels, JWT
-            authentication, product management, shopping cart, and order
-            workflows.
-          </p>
-          <p>
-            <strong>Frontend:</strong> React, Bootstrap, Axios<br />
-            <strong>Backend:</strong> ASP.NET Core Web API<br />
-            <strong>Database:</strong> SQL Server
-          </p>
-          <a href="https://github.com/mhdhsp/Teexo_backend.git" target="_blank" class="btn small">View Project</a>
-          
-        </div>
-      </div>
-    </section>
+<!-- Education -->
+<section id="education" class="container">
+  <h3>🎓 Education</h3>
+  <div class="card">
+    <p>
+      <strong>Bachelor of Computer Application (BCA)</strong><br>
+      Calicut University, Kerala
+    </p>
+  </div>
+</section>
 
-    <!-- Education -->
-    <section id="education" class="container">
-      <h3>🎓 Education</h3>
-      <div class="card-grid">
-        <div class="card">
-          <p><strong>BCA</strong><br />Calicut University<br />2018 – 2021</p>
-        </div>
-        <div class="card">
-          <p>
-            <strong>Higher Secondary (CS)</strong><br />GMHSS Perinthalmanna<br />2016 – 2018
-          </p>
-        </div>
-      </div>
-    </section>
+<!-- Languages -->
+<section id="languages" class="container">
+  <h3>🌍 Languages</h3>
+  <div class="lang-badges">
+    <span>English</span>
+    <span>Malayalam</span>
+    <span>Hindi</span>
+    <span>Arabic</span>
+  </div>
+</section>
 
-    <!-- Languages -->
-    <section id="languages" class="container">
-      <h3>🌍 Languages</h3>
-      <div class="lang-badges">
-        <span>English</span>
-        <span>Hindi</span>
-        <span>Malayalam</span>
-        <span>Arabic</span>
-      </div>
-    </section>
+<footer>
+  <p>⚡ Built by Muhammed Suhail P | .NET Full-Stack Developer</p>
+</footer>
 
-    <!-- Contact -->
-    <section id="contact" class="container">
-      <h3>📬 Contact Me</h3>
-      <form id="contactForm" action="https://formspree.io/f/movnzedn" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn primary">Send Message</button>
-      </form>
-    </section>
-
-    <footer>
-      <p>⚡ Built by Muhammed Suhail P | .NET Full Stack Developer</p>
-    </footer>
-
-    <script>
-      const form = document.getElementById("contactForm");
-
-      form.addEventListener("submit", async function (event) {
-        event.preventDefault();
-        const formData = new FormData(form);
-
-        const response = await fetch(form.action, {
-          method: form.method,
-          body: formData,
-          headers: { Accept: "application/json" }
-        });
-
-        if (response.ok) {
-          alert("✅ Message sent successfully!");
-          form.reset();
-        } else {
-          alert("⚠️ Oops! Something went wrong. Please try again.");
-        }
-      });
-    </script>
-  </body>
+</body>
 </html>
